# github-release

./: .devcontainer.json  .hlint.yaml  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  LICENSE.markdown  README.markdown  README.md  appveyor.yml  cabal.project  compose.yaml  github-release.cabal  package.yaml  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
source/executable/: Main.hs
src/exe/: Main.hs
src/lib/: GitHubRelease.hs
