cabal-version: 2.2

name: github-release
version: 2.0.0.2

synopsis: Upload files to GitHub releases.
description: GitHub Release uploads files to GitHub releases.

build-type: Simple
category: Utility
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/github-release
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.15.0 && < 4.18
    , aeson >= 1.4.7 && < 1.6 || >= 2.0.0 && < 2.2
    , burrito >= 1.2.0 && < 1.3 || >= 2.0.0 && < 2.1
    , bytestring >= 0.10.12 && < 0.12
    , http-client >= 0.6.4 && < 0.8
    , http-client-tls >= 0.3.5 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , mime-types >= 0.1.0 && < 0.2
    , optparse-generic >= 1.3.1 && < 1.5
    , text >= 1.2.5 && < 1.3 || >= 2.0 && < 2.1
    , unordered-containers >= 0.2.10 && < 0.3
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: github-release
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  autogen-modules: Paths_github_release
  exposed-modules: GitHubRelease
  hs-source-dirs: source/library
  other-modules: Paths_github_release

executable github-release
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs
