cabal-version: 2.2

name: github-release
version: 2.0.0.5

synopsis: Upload files to GitHub releases.
description: GitHub Release uploads files to GitHub releases.

build-type: Simple
category: Utility
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/github-release
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , aeson >= 2.0.3 && < 2.2
    , base >= 4.16.0 && < 4.19
    , burrito >= 1.2.0 && < 1.3 || >= 2.0.0 && < 2.1
    , bytestring >= 0.11.3 && < 0.12
    , http-client >= 0.7.13 && < 0.8
    , http-client-tls >= 0.3.6 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , mime-types >= 0.1.0 && < 0.2
    , optparse-generic >= 1.4.8 && < 1.6
    , text >= 1.2.5 && < 1.3 || >= 2.0 && < 2.1
    , unordered-containers >= 0.2.17 && < 0.3
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: github-release
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  autogen-modules: Paths_github_release
  exposed-modules: GitHubRelease
  hs-source-dirs: source/library
  other-modules: Paths_github_release

executable github-release
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs
