cabal-version: 2.2
name: github-release
version: 2.0.0.14
synopsis: Upload files to GitHub releases.
description: GitHub Release uploads files to GitHub releases.
build-type: Simple
category: Utility
extra-doc-files:
  CHANGELOG.md
  README.md

license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/github-release
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.19.0.0 || ^>=4.20.0.0 || ^>=4.21.0.0 || ^>=4.22.0.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: github-release
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: Paths_github_release
  build-depends:
    aeson ^>=2.1.2.1 || ^>=2.2.2.0,
    burrito ^>=2.0.1.9,
    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
    http-client ^>=0.7.17,
    http-client-tls ^>=0.3.6.3,
    http-types ^>=0.12.4,
    mime-types ^>=0.1.2.0,
    optparse-generic ^>=1.5.2,
    text ^>=2.0.2 || ^>=2.1,
    unordered-containers ^>=0.2.20,

  -- cabal-gild: discover source/library
  exposed-modules: GitHubRelease
  hs-source-dirs: source/library
  other-modules: Paths_github_release

executable github-release
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
